navigation z-index bug

--- a/src/styles/scss/navigation.scss
+++ b/src/styles/scss/navigation.scss
@@ -57,7 +57,7 @@
       display: none;
       width: 30%;
       min-width: 254px;
-      z-index: 2;
+      z-index: 5;
       padding-top: 1.5rem;
 
       li {
